--- a/src/app/cdk/side-bar/modals/modal-keyword/modal-keyword.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-keyword/modal-keyword.component.scss
@@ -14,7 +14,9 @@
 
 .icon-drag {
   height: 32px;
-  margin: 4px;
+  margin: 4px 0;
+  margin-inline-start: 6px;
+  margin-inline-end: 10px;
 }
 
 .keywords-input-line {
