--- a/src/app/cdk/side-bar/modals/modal-person-identifiers/modal-person-identifiers.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-person-identifiers/modal-person-identifiers.component.scss
@@ -43,7 +43,8 @@
     margin-top: 3px;
     cursor: move;
     z-index: 1;
-    margin-inline-end: 18px;
+    margin-inline-start: 6px;
+    margin-inline-end: 10px;
   }
 }
 
